<?xml version="1.0"?>
<package format="3">
  <name>fadecandy_driver</name>
  <version>0.1.3</version>
  <description>ROS driver for fadecandy LED controllers</description>

  <maintainer email="jon.binney@ironox.com">Jon Binney</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>auto_lint</build_depend>
  <build_depend>auto_lint</build_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <depend>roscpp</depend>
  <depend>fadecandy_msgs</depend>
  <depend>libusb</depend>
</package>
