<?xml version="1.0"?>
<package format="3">
  <name>fadecandy_driver</name>
  <version>0.1.3</version>
  <description>ROS driver for fadecandy LED controllers</description>

  <maintainer email="jon.binney@ironox.com">Jon Binney</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>fadecandy_msgs</depend>
  <depend>libusb</depend>
  <depend>roscpp</depend>

  <test_depend>rospy</test_depend>
</package>
