<?xml version="1.0"?>
<package format="3">
  <name>fadecandy_msgs</name>
  <version>0.2.0</version>
  <description>ROS msgs for fadecandy LED controllers</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
